[package]
authors = ["AbsoluteVirtueXI <absolutevirtuexi@gmail.com>"]
description = 'kitties pallet.'
edition = '2018'
homepage = 'https://github.com/AbsoluteVirtueXI/kitties-chain'
license = 'Unlicense'
name = 'pallet-kitties'
repository = 'https://github.com/AbsoluteVirtueXI/kitties-chain'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]